# mug

./: Cargo.toml
src/: lib.rs
src/coaster_ndarray/: mod.rs
src/tensor_grad/: mod.rs  tensor.rs  tensor_ir.rs
src/tensor_grad/ir/: add.rs  agg.rs  error.rs  ethereal.rs  exp.rs  hadamard.rs  mod.rs  mul.rs  scalar_mul.rs  sub.rs  util.rs
src/tensor_op/: chain_gradient.rs  mod.rs  operation.rs  operation_ir.rs
src/tensor_op/arith/: add.rs  mean.rs  mod.rs  multiply.rs  pow.rs  scal.rs  sqrt.rs  sum.rs
src/tensor_op/graph/: mod.rs  traversal.rs  viz.rs  writer.rs
src/tensor_op/util/: identity.rs  mod.rs  squeeze.rs  transpose.rs  unsqueeze.rs
src/tests/: mod.rs
src/utility/: mod.rs
