[package]
name = "mug"
description = "Coaster library for Autodiff"
version = "0.0.1"
authors = [
    "Lissa Hyacinth <lissahyacinth@gmail.com>",
]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
coaster = { version = "0.1", default-features = false}
coaster-nn = { version = "*", default-features = false }
coaster-blas = {version = "*", default-feature=false }
lazy_static = "1"
log = "0.4"
env_logger = "*"
# native
rust-blas = { version = "^0.1", optional = true }
# cuda
rcublas = { version = "0.5", optional = true }
spin = { version = "0.5", optional = true }
ndarray = "0.15.0"
num = "*"
num-traits = "*"
rand = "*"
crossbeam = "*"
crossbeam-utils = "*"
thiserror = "1.0"
uuid = {version = "0.8", features = ["v4"]}
itertools = "0.10.0"

[dev-dependencies]

[features]
default = ["native", "cuda"]
native = ["coaster/native", "rust-blas", "coaster-blas/native"]
cuda = ["coaster/cuda", "rcublas", "spin"]
opencl = ["coaster/opencl"]
